@@ -14,9 +14,9 @@ matrix:
     - jdk: openjdk8
     - env: JDK='OpenJDK 15'
       install: . ./install-jdk.sh -F 15 -C --url 'https://api.adoptopenjdk.net/v3/binary/latest/15/ga/linux/x64/jdk/hotspot/normal/adoptopenjdk'
-    #- env: JDK='OpenJDK 16'
-    #  install: . ./install-jdk.sh -F 16 -C --url 'https://api.adoptopenjdk.net/v3/binary/latest/16/ea/linux/x64/jdk/hotspot/normal/adoptopenjdk'
-    
+    - env: JDK='OpenJDK 16'
+      install: . ./install-jdk.sh -F 16 -C --url 'https://api.adoptopenjdk.net/v3/binary/latest/16/ea/linux/x64/jdk/hotspot/normal/adoptopenjdk'
+
 # avoid default dependency command for maven, 'true' means 'return true' and continue
 install: true
 
