@@ -1,4 +1,5 @@
 3.0
+	Helper.createFormatter is using the ROOT Locale instead of UK, see #2186
     default for GraphHopperMatrixWeb (client for Matrix API) is now the sync POST request without the artificial polling delay in most cases
     refactored TransportationMode to better reflect the usage in source data parsing only
     CustomWeighting requires LinkedHashMap throw exception if this is not provided
